// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MessageContainer component renders correctly with multiple messages 1`] = `
<div
  className="bg-gray-100 dark:bg-gray-700 inline-block p-5 pb-6 rounded-3xl shadow-xl"
>
  <div
    className="flex mb-4 mx-2"
  >
    <p
      className="text-2xl font-bold text-gray-800 dark:text-gray-300"
    >
      TestTitle
    </p>
    <button
      className="inline ml-auto my-auto"
      onClick={[MockFunction]}
      type="button"
    >
      <svg
        className="stroke-current text-gray-500 dark:text-gray-300 w-5 h-5"
        fill="none"
        height={24}
        stroke="currentColor"
        strokeLinecap="round"
        strokeLinejoin="round"
        strokeWidth="2"
        viewBox="0 0 24 24"
        width={24}
        xmlns="http://www.w3.org/2000/svg"
      >
        <polyline
          points="9 11 12 14 22 4"
        />
        <path
          d="M21 12v7a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h11"
        />
      </svg>
    </button>
  </div>
  <div
    className="grid grid-cols-1 space-y-5"
  >
    <div
      className="rounded-3xl bg-white dark:bg-gray-800 w-80 p-5 shadow-lg relative"
    >
      <div
        className="flex"
      >
        <div
          className="h-12 w-12 rounded-full overflow-clip overflow-hidden inline-block cursor-default"
        >
          <svg
            viewBox="0 0 1 1"
          >
            <rect
              fill="#000"
              height={1}
              width={1}
            />
            <text
              dy="0.178"
              fill="#FFF"
              style={
                Object {
                  "fontFamily": "Inter",
                  "fontSize": 0.5,
                  "fontWeight": "bold",
                }
              }
              textAnchor="middle"
              x={0.5}
              y={0.5}
            >
              Gi
            </text>
          </svg>
        </div>
        <div
          className="my-auto inline-block ml-5"
        >
          <p
            className="text-lg font-bold mb-0 leading-5 text-gray-800 dark:text-gray-300"
          >
            New Pull Request
          </p>
          <p
            className="text-xs font-bold text-gray-500 dark:text-gray-400"
          >
            — notipie
          </p>
        </div>
      </div>
      <div
        className="rounded-full w-2.5 h-2.5 bg-yellow-500 dark:bg-yellow-600 absolute top-4 right-4"
      />
      <p
        className="whitespace-pre-line text-sm leading-4 my-3 text-gray-800 dark:text-gray-300"
      >
        <span>
          #12 add some new amazing functionality

Closes #10. Changes both in 'core' and 'ui'. Needs additional work with this and that.
        </span>
      </p>
      <div
        className="flex"
      >
        <div
          className="inline-block"
        >
          <p
            className="text-xs font-bold text-gray-500 dark:text-gray-400"
          >
            — by 
            Github
          </p>
          <p
            className="text-xs font-bold text-gray-500 dark:text-gray-400"
          >
            2 hours ago
          </p>
        </div>
      </div>
    </div>
    <div
      className="rounded-3xl bg-white dark:bg-gray-800 w-80 p-5 shadow-lg relative"
    >
      <div
        className="flex"
      >
        <div
          className="h-12 w-12 rounded-full overflow-clip overflow-hidden inline-block cursor-default"
        >
          <svg
            viewBox="0 0 1 1"
          >
            <rect
              fill="#000"
              height={1}
              width={1}
            />
            <text
              dy="0.178"
              fill="#FFF"
              style={
                Object {
                  "fontFamily": "Inter",
                  "fontSize": 0.5,
                  "fontWeight": "bold",
                }
              }
              textAnchor="middle"
              x={0.5}
              y={0.5}
            >
              Gi
            </text>
          </svg>
        </div>
        <div
          className="my-auto inline-block ml-5"
        >
          <p
            className="text-lg font-bold mb-0 leading-5 text-gray-800 dark:text-gray-300"
          >
            New Pull Request
          </p>
        </div>
      </div>
      <div
        className="rounded-full w-2.5 h-2.5 bg-yellow-500 dark:bg-yellow-600 absolute top-4 right-4"
      />
      <p
        className="whitespace-pre-line text-sm leading-4 my-3 text-gray-800 dark:text-gray-300"
      >
        <span>
          
        </span>
      </p>
      <div
        className="flex"
      >
        <div
          className="inline-block"
        >
          <p
            className="text-xs font-bold text-gray-500 dark:text-gray-400"
          >
            — by 
            Github
          </p>
          <p
            className="text-xs font-bold text-gray-500 dark:text-gray-400"
          >
            2 hours ago
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`MessageContainer component renders correctly with no messages 1`] = `
<div
  className="bg-gray-100 dark:bg-gray-700 inline-block p-5 pb-6 rounded-3xl shadow-xl"
>
  <div
    className="flex mb-4 mx-2"
  >
    <p
      className="text-2xl font-bold text-gray-800 dark:text-gray-300"
    >
      TestTitle
    </p>
    <button
      className="inline ml-auto my-auto"
      onClick={[MockFunction]}
      type="button"
    >
      <svg
        className="stroke-current text-gray-500 dark:text-gray-300 w-5 h-5"
        fill="none"
        height={24}
        stroke="currentColor"
        strokeLinecap="round"
        strokeLinejoin="round"
        strokeWidth="2"
        viewBox="0 0 24 24"
        width={24}
        xmlns="http://www.w3.org/2000/svg"
      >
        <polyline
          points="9 11 12 14 22 4"
        />
        <path
          d="M21 12v7a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h11"
        />
      </svg>
    </button>
  </div>
  <div
    className="grid grid-cols-1 space-y-5"
  />
</div>
`;

exports[`MessageContainer component renders correctly with one message 1`] = `
<div
  className="bg-gray-100 dark:bg-gray-700 inline-block p-5 pb-6 rounded-3xl shadow-xl"
>
  <div
    className="flex mb-4 mx-2"
  >
    <p
      className="text-2xl font-bold text-gray-800 dark:text-gray-300"
    >
      TestTitle
    </p>
    <button
      className="inline ml-auto my-auto"
      onClick={[MockFunction]}
      type="button"
    >
      <svg
        className="stroke-current text-gray-500 dark:text-gray-300 w-5 h-5"
        fill="none"
        height={24}
        stroke="currentColor"
        strokeLinecap="round"
        strokeLinejoin="round"
        strokeWidth="2"
        viewBox="0 0 24 24"
        width={24}
        xmlns="http://www.w3.org/2000/svg"
      >
        <polyline
          points="9 11 12 14 22 4"
        />
        <path
          d="M21 12v7a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h11"
        />
      </svg>
    </button>
  </div>
  <div
    className="grid grid-cols-1 space-y-5"
  >
    <div
      className="rounded-3xl bg-white dark:bg-gray-800 w-80 p-5 shadow-lg relative"
    >
      <div
        className="flex"
      >
        <div
          className="h-12 w-12 rounded-full overflow-clip overflow-hidden inline-block cursor-default"
        >
          <svg
            viewBox="0 0 1 1"
          >
            <rect
              fill="#000"
              height={1}
              width={1}
            />
            <text
              dy="0.178"
              fill="#FFF"
              style={
                Object {
                  "fontFamily": "Inter",
                  "fontSize": 0.5,
                  "fontWeight": "bold",
                }
              }
              textAnchor="middle"
              x={0.5}
              y={0.5}
            >
              Gi
            </text>
          </svg>
        </div>
        <div
          className="my-auto inline-block ml-5"
        >
          <p
            className="text-lg font-bold mb-0 leading-5 text-gray-800 dark:text-gray-300"
          >
            New Pull Request
          </p>
          <p
            className="text-xs font-bold text-gray-500 dark:text-gray-400"
          >
            — notipie
          </p>
        </div>
      </div>
      <div
        className="rounded-full w-2.5 h-2.5 bg-yellow-500 dark:bg-yellow-600 absolute top-4 right-4"
      />
      <p
        className="whitespace-pre-line text-sm leading-4 my-3 text-gray-800 dark:text-gray-300"
      >
        <span>
          #12 add some new amazing functionality

Closes #10. Changes both in 'core' and 'ui'. Needs additional work with this and that.
        </span>
      </p>
      <div
        className="flex"
      >
        <div
          className="inline-block"
        >
          <p
            className="text-xs font-bold text-gray-500 dark:text-gray-400"
          >
            — by 
            Github
          </p>
          <p
            className="text-xs font-bold text-gray-500 dark:text-gray-400"
          >
            2 hours ago
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;
